# CppDeepLearning

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  main.cpp
lib/: CMakeLists.txt  autograd.hpp  debug.hpp  tensor.hpp
test/: CMakeLists.txt  test.cpp
